--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  color: darkgoldenrod;
+  background-color: darkslategray;
+  font-size: 22px;
 }
 
 code {
