--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,8 @@ html {
 
 body {
   min-height: 100vh;
-  font-family: 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -22,8 +21,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; 
-  width: 100%; 
+  height: 100vh;
+  width: 100%;
   max-width: 500px;
   border: 1px solid mediumblue;
   margin: auto;
@@ -111,7 +110,7 @@ ul li::before {
   cursor: pointer;
 }
 
-.item svg:focus, 
+.item svg:focus,
 .item svg:hover {
   color: red;
   outline: none;
@@ -130,7 +129,7 @@ ul li::before {
   left: -99999px;
 }
 
-.addForm input[type='text'] {
+.addForm input[type="text"] {
   flex-grow: 1;
   max-width: calc(100% - 50px);
   min-height: 48px;
@@ -152,7 +151,7 @@ button {
   cursor: pointer;
 }
 
-button:focus, 
+button:focus,
 button:hover {
   color: white;
   background-color: #574776;
@@ -173,7 +172,7 @@ button:hover {
   left: -99999px;
 }
 
-.searchForm input[type='text'] {
+.searchForm input[type="text"] {
   flex-grow: 1;
   max-width: 100%;
   min-height: 48px;
